<resources>
    <string name="app_name">BacaBuku</string>
    <string name="logo_splash_screnn">logo</string>
    <string name="judul">BacaBuku.id</string>
    <string name="books_name">nama buku</string>
    <string name="detail">detail buku</string>
    <string name="books_penulis">penulis</string>
    <string name="books_penerbit">penerbit</string>
    <string name="books_tahun">tahun</string>
    <string name="sinopsis">sinopsis</string>
    <string name="welcome">Welcome to DwikiLibrary</string>
    <string name="subjud">Which book suits your current mood?</string>
    <string name="content_text">Buku ini menceritakan tentang Harles Bokowski seorang pecandu alkohol senang bermain perempuan,pejudi kronis,kasar,kikir,dan tukang utang. Ia bercita-cita menjadi seorang penulis.karya Bukowski selalu di tolak oleh hampir setiap majalah,tetapi hal tersebut tidak membuat nya menyerah ia tetap menulis dan membuat puisi.</string>
    <string name="content_specs_display">Mark Manson</string>
    <string name="content_specs_size">Grasindo</string>
    <string name="content_specs_battery">Published in 2016</string>
    <string name="writer">Mark Manson</string>
    <string name="about">Mengenai Buku</string>
    <string name="Penulis">Penulis</string>
    <string name="Penerbit">Penerbit</string>
    <string name="Tahunterbit">Tahun Terbit</string>
    <string name="seller">Dibaca oleh</string>
    <string name="my_name">Muhammad Dwiki Yudhistira</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">Sebuah seni untuk bersikap bodo amat</string>
    <string name="dummy_photos">1 photos</string>
    <string name="home">Beranda</string>
    <string name="menu">Tentang</string>
    <string name="read">Baca</string>
    <string name="nama">Muhammad Dwiki Yudhistira</string>
    <string name="email">yudhistiradwiki17@gmail.com</string>
    <string name="name">name</string>
    <string name="pass">pass</string>
    <string name="age">age</string>
    <string name="subjud1">Selamat datang di aplikasi BacaBuku.id</string>
    <string name="subjud3">Aplikasi terbaik untuk meningkatkan minat baca masyarakat.</string>
    <string name="photo">photo</string>
    <string name="loadfisrt">Membaca buku itu sangat menyenangkan. Bacalah buku sebanyak-banyaknya.</string>
    <string name="loadsecond">Project aplikasi mata kuliah Pemrograman perangkat bergerak.</string>
    <string name="next">Selanjutnya</string>
    <string name="pref">Kembali</string>
    <string name="loadthird">Project ini dibuat oleh Muhammad Dwiki Yudhistira, Nurul Huda, dan Muhammad Raffi Wijaya.</string>
</resources>