<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            tools:text="@string/books_name" />
        <TextView
            android:id="@+id/tv_item_penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            tools:text="@string/books_penulis" />
        <TextView
            android:id="@+id/tv_item_penerbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            tools:text="@string/books_penerbit" />
        <TextView
            android:id="@+id/tv_item_tahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            tools:text="@string/books_tahun" />
    </LinearLayout>
</LinearLayout>
