<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatebookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:gravity="center"
                android:id="@+id/tiName"
                android:padding="15dp"
                app:startIconDrawable="@drawable/ic_buku"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Penulis"
                android:gravity="center"
                android:id="@+id/tiPenulis"
                android:padding="10dp"
                app:startIconDrawable="@drawable/ic_penulis">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Penerbit"
                android:gravity="center"
                android:id="@+id/tiPenerbit"
                android:padding="10dp"
                app:startIconDrawable="@drawable/ic_penerbit"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Tahunterbit"
                android:gravity="center"
                android:id="@+id/tiTahun"
                android:padding="10dp"
                app:startIconDrawable="@drawable/ic_tahun"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sinopsis"
                android:gravity="center"
                android:id="@+id/tiSinopsis"
                android:padding="10dp"
                app:startIconDrawable="@drawable/ic_sinopsis"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:inputType="text|textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                app:icon="@drawable/ic_edit"
                android:layout_margin="10dp"
                android:id="@+id/btnEdit"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>